[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
console_log = "1.0.0"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
tracing-web = "0.1.3"
wgpu = "0.19.3"
winit = "0.29.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.19.3", features = ["webgl"] }
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }

[features]
